--- a/misas-thai-street-cuisine-2.0/misas-thai-street-cuisine-2.0.csproj
+++ b/misas-thai-street-cuisine-2.0/misas-thai-street-cuisine-2.0.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Blazorise" Version="1.8.3" />
     <PackageReference Include="Blazorise.Bootstrap" Version="1.4.1" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.8.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
+    <PackageReference Include="Square" Version="42.0.2" />
   </ItemGroup>
 
 </Project>
