Refactor MenuInfo component delivery window text and styles; integrate MudBlazor components and update carousel initialization in Home page

--- a/misas-thai-street-cuisine-2.0/misas-thai-street-cuisine-2.0.csproj
+++ b/misas-thai-street-cuisine-2.0/misas-thai-street-cuisine-2.0.csproj
@@ -8,13 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazorise.Bootstrap5" Version="1.8.3" />
     <PackageReference Include="bootstrap" Version="5.3.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.20" PrivateAssets="all" />
-    <PackageReference Include="Blazorise" Version="1.8.3" />
-    <PackageReference Include="Blazorise.Bootstrap" Version="1.4.1" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.8.3" />
+    <PackageReference Include="MudBlazor" Version="7.8.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
     <PackageReference Include="Square" Version="42.0.2" />
