Square sandbox values

--- a/misas-thai-street-cuisine-2.0/appsettings.json
+++ b/misas-thai-street-cuisine-2.0/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ApiBaseUrl": "https://misasthaistreetcuisine.com/api",
   "Square": {
-    "ApplicationId": "sq0idp-vBWKF52a4zCjMaxzbKHJTw",
-    "LocationId": "LHWQP128FDFZF"
+    "ApplicationId": "sandbox-sq0idb-1gDDPcTuPZCWT0tkbGo2Ig",
+    "LocationId": "LT41HRBZ4JM47"
   }
 }
