Update API configurations and adjust authorization levels for payment processing

--- a/misas-thai-street-cuisine-2.0/appsettings.json
+++ b/misas-thai-street-cuisine-2.0/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiBaseUrl": "https://misasthaistreetcuisine.com/api",
+  "ApiBaseUrl": "https://misas-thai-api.azurewebsites.net/api",
   "Square": {
     "ApplicationId": "sandbox-sq0idb-1gDDPcTuPZCWT0tkbGo2Ig",
     "LocationId": "LT41HRBZ4JM47"
