--- a/api/api.csproj
+++ b/api/api.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.6.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Square" Version="42.0.2" />
     <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
   </ItemGroup>
