--- a/misas-thai-street-cuisine-2.0/Properties/launchSettings.json
+++ b/misas-thai-street-cuisine-2.0/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
   "launchBrowser": false,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://localhost:5012",
+      "applicationUrl": "http://0.0.0.0:5012",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
   "launchBrowser": false,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7251;http://localhost:5012",
+      "applicationUrl": "https://0.0.0.0:7251;http://0.0.0.0:5012",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
