Accessing sensitive data from Azure

--- a/misas-thai-street-cuisine-2.0/wwwroot/appsettings.Development.json
+++ b/misas-thai-street-cuisine-2.0/wwwroot/appsettings.Development.json
@@ -3,5 +3,8 @@
   "Square": {
     "ApplicationId": "sandbox-sq0idb-1gDDPcTuPZCWT0tkbGo2Ig",
     "LocationId": "LT41HRBZ4JM47"
+  },
+  "GoogleMaps": {
+    "ApiKey": "AIzaSyBbnp9YiU7X-EhFMBaqRx_Vta2wTz6YvzQ"
   }
 }
