Update ApiBaseUrl to point to the correct Azure Functions endpoint

--- a/misas-thai-street-cuisine-2.0/wwwroot/appsettings.json
+++ b/misas-thai-street-cuisine-2.0/wwwroot/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiBaseUrl": "https://your-azure-function-app.azurewebsites.net/api",
+  "ApiBaseUrl": "https://misas-thai-api.azurewebsites.net/api",
   "Square": {
     "LocationId": "YOUR_PRODUCTION_LOCATION_ID"
   }
