Added error notifications for third party services

--- a/misas-thai-street-cuisine-2.0/wwwroot/appsettings.json
+++ b/misas-thai-street-cuisine-2.0/wwwroot/appsettings.json
@@ -2,5 +2,6 @@
   "ApiBaseUrl": "https://misas-thai-api.azurewebsites.net/api",
   "Square": {
     "LocationId": "YOUR_PRODUCTION_LOCATION_ID"
-  }
+  },
+  "AdminEmail": "msthaistreetcuisine@gmail.com"
 }
